@@ -1,6 +1,7 @@
 irrlamb 0.3.0 -
 - UI now scales with resolution
 - Reworked UI theme
+- Added gameplay options
 - Windows build now uses MinGW-w64
 - Added irrlicht source to project and fixed many irrlicht bugs
 - Added mouse sensitivity to options
